# porygon

./: .dockerignore  .gitignore  .prettierrc  Dockerfile.bun.scripts  Dockerfile.bun.web  Dockerfile.seed  Dockerfile.web  bun.lockb  docker-compose.scripts.yml  docker-compose.web.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
apps/distributed-ledger/: Cargo.toml
apps/scripts/: package.json
apps/scripts/templates/lib/: build.ts.hbs  lib--index.ts.hbs  package.json.hbs  (+2 more)
apps/scripts/types/: index.d.ts
apps/tcg-api/: Cargo.toml  Dockerfile  docker-compose.yml
apps/tcg-api/src/: main.rs
apps/tcg-api/src/database/: mod.rs
apps/tcg-api/src/database/neo4j/: mod.rs
apps/tcg-api/src/database/postgres/: mod.rs
apps/tcg-api/src/database/postgres/models/: mod.rs
apps/tcg-api/src/database/postgres/models/pokemon_card/: mod.rs
apps/tcg-api/src/database/postgres/models/set/: mod.rs
apps/tcg-api/src/database/traits/: mod.rs
apps/tcg-api/src/routes/: mod.rs
apps/tcg-api/src/routes/health_check/: mod.rs
apps/tcg-api/src/routes/root/: mod.rs
apps/tcg-api/src/services/log/: mod.rs
apps/tcg-api/src/state/: mod.rs
apps/tcg-api/src/utils/: mod.rs
apps/tcg-api/src/utils/cors/: mod.rs
apps/tcg-api/src/utils/headers/: mod.rs
apps/tcg-api/src/utils/json/: mod.rs
apps/tcg-api/src/utils/log/: mod.rs
apps/web/: package.json  tsconfig.json
apps/web/.storybook/: main.ts  preview-head.html
apps/web/src/: App.tsx  index.ts  index.tsx
database/: Dockerfile.neo4j  docker-compose.yml  init.sql
docs/: todo.md
(+5 files in other folders)
