[package]
name = "tcg-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
actix-files = "0.6.6"
serde_json = "1.0.135"
serde = { version = "1.0.217", features = ["derive"] }
debugrs = "0.2.0"
dotenv = "0.15.0"
tokio = { version = "1.42.0", features = ["full"] }
sqlx = { version = "0.8.2", features = [
    "postgres",
    "runtime-tokio-native-tls",
    "macros",
    "time",
] }
actix-cors = "0.7.0"
