[package]
name = "tcg-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
actix-files = "0.6.6"
actix-cors = "0.7.0"
async-graphql = "7.0.14"
async-graphql-actix-web = "7.0.14"
serde_json = "1.0.137"
serde = { version = "1.0.217", features = ["derive"] }
anyhow = "1.0"
debugrs = "0.2.1"
dotenv = "0.15.0"
tokio = { version = "1.42.0", features = ["full"] }
sqlx = { version = "0.8.2", features = [
    "postgres",
    "runtime-tokio-native-tls",
    "macros",
    "time",
] }
neo4rs = "0.8.0"
